[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/window/Window-1.png" type="Texture" id=1]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/Normal-button.tres" type="StyleBox" id=3]
[ext_resource path="res://themes/Hover-button.tres" type="StyleBox" id=4]
[ext_resource path="res://themes/Pressed-button.tres" type="StyleBox" id=5]
[ext_resource path="res://scripts/Quiz.gd" type="Script" id=6]
[ext_resource path="res://scenes/Timer.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 2
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 2
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 2 )

[node name="Quiz" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -384.0
margin_right = 683.0
margin_bottom = 384.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -523.0
margin_top = -360.0
margin_right = 522.0
margin_bottom = 356.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Label" parent="window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.5
margin_top = -310.0
margin_right = 437.5
margin_bottom = -102.0
custom_fonts/font = SubResource( 1 )
text = "Text here"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choices" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -396.0
margin_top = -104.0
margin_right = 396.0
margin_bottom = 232.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Button" parent="choices"]
margin_right = 394.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "A"
clip_text = true

[node name="B" type="Button" parent="choices"]
margin_left = 398.0
margin_right = 792.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "B"
clip_text = true

[node name="C" type="Button" parent="choices"]
margin_top = 170.0
margin_right = 394.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "C"
clip_text = true

[node name="D" type="Button" parent="choices"]
margin_left = 398.0
margin_top = 170.0
margin_right = 792.0
margin_bottom = 336.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "D"
clip_text = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="timerBar" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.833
anchor_right = 0.5
anchor_bottom = 0.833
margin_left = -387.0
margin_top = -7.74402
margin_right = -52.0
margin_bottom = 45.256
rect_scale = Vector2( 2.3, 0.3 )
size_flags_horizontal = 3
max_value = 10.0
value = 10.0
tint_progress = Color( 0.521569, 0, 1, 1 )

[connection signal="pressed" from="choices/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="choices/B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="choices/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="choices/D" to="." method="_on_D_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
